Criando sessão no readme

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <h1>BEM VINDO!</h1>
 <h2>Olá mundo!</h2>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate explicabo obcaecati molestias, ea perferendis voluptatibus voluptates dicta fugit, dolor alias aliquid? Obcaecati officia quae blanditiis maiores? Sequi suscipit neque ea!</p>
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate explicabo obcaecati molestias,
+ea perferendis voluptatibus voluptates dicta fugit, dolor alias aliquid? Obcaecati officia quae
+blanditiis maiores? Sequi suscipit neque ea!</p>
+
