Adicionei novas empresas ao comercio, criei um novo paragrafro de informacao e adicionei novos produtos a venda

--- a/index.html
+++ b/index.html
@@ -5,3 +5,4 @@ ea perferendis voluptatibus voluptates dicta fugit, dolor alias aliquid? Obcaeca
 blanditiis maiores? Sequi suscipit neque ea!</p>
 
 <h3>Criando página na home</h3>
+<p>Sujeito programador</p>
